Overflow fix

--- a/Js/Backend/Assets/styles/sass/components/draft/sandbox.scss
+++ b/Js/Backend/Assets/styles/sass/components/draft/sandbox.scss
@@ -142,7 +142,7 @@
         }
 
         .form-group {
-          overflow: auto;
+          overflow: visible;
 
           pre{
             padding: 9.5px;
